@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.4",
   "name": "js-numerals",
   "description": "Digital Natives test for Dean Vaessen",
   "main": "",
