@@ -11,3 +11,4 @@
 21/10/2016 - 0.1.1: More general makeup of the component elements and cleaned up translateInput.
 23/10/2016 - 0.1.2: Unit tests and improved structure of helper functions.
 23/10/2016 - 0.1.3: Small formatting improvements, added logic for 'zero'.
+24/10/2016 - 0.1.4: Fixed console logs for test fail of translation function.
